[gd_scene load_steps=5 format=3 uid="uid://c8riu6sasiuu7"]

[ext_resource type="Script" uid="uid://ccrw8dxery2gg" path="res://scenes/Tripwire/tripwire.gd" id="1_l1oqp"]
[ext_resource type="Shader" uid="uid://c6yoild3nryvb" path="res://assets/tripwire_line_shader.tres" id="2_bwbli"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_orqdj"]
shader = ExtResource("2_bwbli")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bwbli"]
properties/0/path = NodePath("TripwireConnector1:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("TripwireConnector1:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("TripwireConnector2:position")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("TripwireConnector2:rotation")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("TripwireLine:points")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("Area2D/CollisionPolygon2D:polygon")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("TripwireConnector1:self_modulate")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath("TripwireConnector2:self_modulate")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath(".:owner_team")
properties/8/spawn = true
properties/8/replication_mode = 2

[node name="Tripwire" type="Node2D"]
script = ExtResource("1_l1oqp")

[node name="TripwireLine" type="Line2D" parent="."]
z_index = 4
z_as_relative = false
material = SubResource("ShaderMaterial_orqdj")
points = PackedVector2Array(0, 0, 0, 0)
width = 15.0
default_color = Color(0, 0.64, 0.490667, 1)
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="TripwireConnector1" type="Line2D" parent="."]
z_index = 4
z_as_relative = false
points = PackedVector2Array(0, -10, 0, 10)
default_color = Color(0.0402569, 0.434141, 0.516538, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="TripwireConnector2" type="Line2D" parent="."]
z_index = 4
z_as_relative = false
points = PackedVector2Array(0, -10, 0, 10)
default_color = Color(0.0402569, 0.434141, 0.516538, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_bwbli")

[connection signal="body_entered" from="Area2D" to="." method="_on_player_entered"]
